# main.py
@@ -1,10 +1,39 @@
+import json
 import os
-from flask import Flask, jsonify, request, make_response, render_template, flash, redirect
+import ssl
+import certifi
+import boto3
+from flask_pymongo import PyMongo
+from pymongo import MongoClient
 from flask_swagger_ui import get_swaggerui_blueprint
+from flask_cors import CORS
+from flask_restful import Api, Resource, reqparse
+from flask_jwt_extended import JWTManager, jwt_required, create_access_token, get_jwt_identity
+from pymongo import MongoClient
+from bson.json_util import dumps
+from crypt import methods
+from flask import Flask, jsonify, request, make_response, render_template, flash, redirect, g, after_this_request
+from bson.json_util import dumps
+from bson.objectid import ObjectId
+from flask_httpauth import HTTPBasicAuth
+from werkzeug.security import generate_password_hash, check_password_hash
+from flasgger import Swagger
+from botocore.exceptions import NoCredentialsError
+
 
 app = Flask(__name__)
+cors = CORS(app)
+app.config["CORS_HEADERS"] = "Content-Type"
+mongo_db_url = os.environ.get("MONGO_DB_CONN_STRING")
+client = MongoClient(mongo_db_url)
+db = client['tapzzi'] 
 
-#Swagger Integration
+connection_string = f"mongodb+srv://pratyush:76m3t4IY0kqh19p8@superminds-cluster-public-f49e7a24.mongo.ondigitalocean.com/admin?authSource=admin&replicaSet=superminds-cluster-public&tls=true"
+client = MongoClient(connection_string, tlsCAFile=certifi.where())
+
+app.config['MONGO_URI'] = "mongodb+srv://pratyush:76m3t4IY0kqh19p8@superminds-cluster-public-f49e7a24.mongo.ondigitalocean.com/admin?authSource=admin&replicaSet=superminds-cluster-public&tls=true"
+mongo = PyMongo(app)
+
 SWAGGER_URL = '/swagger'  # URL for exposing Swagger UI (without trailing '/')
 API_URL = '/static/swagger.json'  # Our API url (can of course be a local resource)
 
@@ -18,180 +47,237 @@ swaggerui_blueprint = get_swaggerui_blueprint(
 
 app.register_blueprint(swaggerui_blueprint, url_prefix = SWAGGER_URL)
 
-# Games Schema
-games = [
-    {
-        'id': 1,
-        'description':'Explore and play bite-sized games anytime, anywhere-no downloads, just pure entertainment on the go!',
-        'imageUrl': 'www.xyz.com',
-        'title': 'Games',
-        'iframe': 'http://xyz.com/index.html',
-        'thumbnail': '/assets/games/cricket.jpg'
-    }
-]
+# Configure JWT
+app.config['JWT_SECRET_KEY'] = '854d9f0a3a754b16a6e1f3655b3cfbb5'
+jwt = JWTManager(app)
+app.config['JWT_TOKEN_LOCATION'] = ['headers']
+app.config['JWT_BLACKLIST_ENABLED'] = True
+app.config['PROPAGATE_EXCEPTIONS'] = True
+
+headers = {
+    'Content-Type': 'application/json',
+    'Authorization': 'Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJmcmVzaCI6ZmFsc2UsImlhdCI6MTcwMDQ3MTg0NCwianRpIjoiNjg1MDdkZDAtOGZiYS00NTM1LTk0M2UtODE3MDcwODMyODM2IiwidHlwZSI6ImFjY2VzcyIsInN1YiI6InVzZXIxIiwibmJmIjoxNzAwNDcxODQ0LCJleHAiOjE3MDA0NzI3NDR9.LwwPvBpOwU6xi6pGAEMUo7KkzFfAZ4S_VYPLrS90k_k'}
+
+# Mock user data for demonstration
+users = {
+    'user1': {'password': 'password1'},
+    "admin": generate_password_hash("admin"),
+}
+
+# Token creation route (login)
+@app.route('/login', methods=['GET','POST'])
+def login():
+    username = request.json.get('username', None)
+    password = request.json.get('password', None)
+
+    if username in users and users[username]['password'] == password:
+        access_token = create_access_token(identity=username)
+        return jsonify(access_token=access_token), 200
+    else:
+        return jsonify({'message': 'Invalid credentials'}), 401
+
+# Protected route (CRUD operations)
+@app.route('/protected', methods=['GET', 'POST'])
+@jwt_required()
+def protected():
+    current_user = get_jwt_identity()
+    return jsonify(logged_in_as=current_user), 200
+
+# Configure BasicAuth
+auth = HTTPBasicAuth()
+
+@auth.verify_password
+def verify_password(username, password):
+    if username in users and \
+            check_password_hash(users.get(username), password):
+        return username
+
+@app.route('/')
+@auth.login_required
+def index():
+    return "Hello, {}!".format(auth.current_user())
+
+# Create a User
+@app.route('/user', methods=['POST'])
+def add_user():
+    _json = request.json
+    _name = _json['name']
+    _email = _json['email']
+    _pwd = _json['pwd']
+
+    if _name and _email and _pwd and request.method == 'POST':
+        _hashed_password = generate_password_hash(_pwd) 
+        id = mongo.db.user.insert_one({'name': _name, 'email': _email, 'pwd': _hashed_password})
+        return {"data":"User added successfully"}
+    else:
+        return {'error':'Not found'}
 
 # Get all games
 @app.route('/games', methods=['GET'])
 def get_games():
-    return games
-
+    games = mongo.db.game.find()
+    resp = dumps(games)
+    return resp
 
 # Get a specific game by ID
-@app.route('/games/<int:id>', methods=['GET'])
-def get_game(id):
-    for game in games:
-        if game['id']==id:
-            return game
-
-    return {'error':'Game not found'}
+@app.route('/game/<id>')
+def game(id):
+    game = mongo.db.game.find_one({'_id':ObjectId(id)})
+    resp = dumps(game)
+    return resp
 
 # Create a game
 @app.route('/games', methods=['POST'])
 def create_game():
-    new_game={'id':len(games)+1, 'description':request.json['description'], 'imageUrl':request.json['imageUrl'], 'title': request.json['title'], 'iframe': request.json['iframe'], 'thumbnail': request.json['thumbnail'] }
-    games.append(new_game)
-    return new_game
+    _json = request.json
+    _description = _json['description']
+    _imageUrl = _json['imageUrl']
+    _title = _json['title']
+    _iframe = _json['iframe']
+    _thumbnail = _json['thumbnail']
 
+    if _description and _imageUrl and _title and _iframe and _thumbnail and request.method == 'POST':
+        id = mongo.db.game.insert_one({'description': _description, 'imageUrl': _imageUrl, 'title': _title, 'iframe': _iframe, 'thumbnail': _thumbnail })
+        return {"data":"Game Added Successfully"}
+    else:
+        return {'error':'Game Not Found'}
 
 # Update a game
-@app.route('/games/<int:id>', methods=['PUT'])
+@app.route('/game/<id>', methods=['PUT'])
 def update_game(id):
-    for game in games:
-        if game['id']==id:
-            game['description']=request.json['description']
-            game['imageUrl']=request.json['imageUrl']
-            game['title']=request.json['title']
-            game['iframe']=request.json['iframe']
-            game['thumbnail']=request.json['thumbnail']
-            return game 
-    return {'error':'Game not found'}
+    _json = request.json
+    _id = _json['id']
+    _description = _json['description']
+    _imageUrl = _json['imageUrl']
+    _title = _json['title']
+    _iframe = _json['iframe']
+    _thumbnail = _json['thumbnail']
+
+    if _description and _imageUrl and _title and _iframe and _thumbnail and request.method == 'PUT':
+        mongo.db.game.update_one({'_id': ObjectId(_id['$oid']) if '$oid' in _id else ObjectId(_id)}, {'$set': {'id': _id, 'description': _description, 'imageUrl': _imageUrl, 'title': _title, 'iframe': _iframe, 'thumbnail': _thumbnail}})
+        resp = jsonify("Game Updated Successfully")
+        resp.status_code = 200
+        return resp
 
 # Delete a game
-@app.route('/games/<int:id>', methods=['DELETE'])
+@app.route('/game/<id>', methods=['DELETE'])
 def delete_game(id):
-    for game in games:
-        if game['id']==id:
-            games.remove(game)
-            return {"data":"Game Deleted Successfully"}
-
-    return {'error':'Game not found'}
-
-tones = [
-    {
-        'id': 1,
-        'description': 'Explore and play bite-sized games anytime, anywhere-no downloads, just pure entertainment on the go!',
-        'audio':'https://xyz.com',
-        'Downloads': '5.5k',
-        'title': 'Three Little Birds',
-        'urlTitle': 'three-little-birds',
-        'visited': '10.5k'
-    }
-]
+    mongo.db.game.delete_one({'_id':ObjectId(id)})
+    resp = jsonify("Game Deleted Successfully")
+    resp.status_code = 200
+    return resp
 
 # Get all tones
 @app.route('/tones', methods=['GET'])
 def get_tones():
-    return tones
-
+    tones = mongo.db.tones.find()
+    resp = dumps(tones)
+    return resp
 
 # Get a specific tone by ID
-@app.route('/tones/<int:id>', methods=['GET'])
-def get_tone(id):
-    for tone in tones:
-        if tone['id']==id:
-            return tone
-
-    return {'error':'Tone not found'}
+@app.route('/tone/<id>')
+def tone(id):
+    tone = mongo.db.tones.find_one({'_id':ObjectId(id)})
+    resp = dumps(tone)
+    return resp
 
 # Create a tone
 @app.route('/tones', methods=['POST'])
 def create_tone():
-    new_tone={'id':len(tones)+1, 'audio':request.json['audio'], 'Downloads':request.json['Downloads'], 'description': request.json['description'],
-     'title': request.json['title'], 'urlTitle': request.json['urlTitle'], 'visited': request.json['visited']}
-    tones.append(new_tone)
-    return new_tone
+    _json = request.json
+    _audio = _json['audio']
+    _downloads = _json['downloads']
+    _description = _json['description']
+    _title = _json['title']
+    _urlTitle = _json['urlTitle']
+    _visited = _json['visited']
 
+    if _audio and _downloads and _description and _title and _urlTitle and _visited and request.method == 'POST':
+        id = mongo.db.tones.insert_one({'audio': _audio, 'downloads': _downloads, 'description': _description, 'title': _title, 'urlTitle': _urlTitle, 'visited': _visited})
+        return {"data":"Tone Added Successfully"}
+    else:
+        return {'error':'Tone Not Found'}
 
 # Update a tone
-@app.route('/tones/<int:id>', methods=['PUT'])
+@app.route('/tone/<id>', methods=['PUT'])
 def update_tone(id):
-    for tone in tones:
-        if tone['id']==id:
-            tone['audio']=request.json['audio']
-            tone['Downloads']=request.json['Downloads']
-            tone['description']=request.json['description']
-            tone['title']=request.json['title']
-            tone['urlTitle']=request.json['urlTitle']
-            tone['visited']=request.json['visited']
-            return tone 
-    return {'error':'Tone not found'}
+    _json = request.json
+    _id = id
+    _audio = _json['audio']
+    _downloads = _json['downloads']
+    _description = _json['description']
+    _title = _json['title']
+    _urlTitle = _json['urlTitle']
+    _visited = _json['visited']
+
+    if _audio and _downloads and _description and _title and _urlTitle and _visited and request.method == 'PUT':
+        mongo.db.tones.update_one({'_id': ObjectId(_id['$oid']) if '$oid' in _id else ObjectId(_id)}, {'$set': {'audio': _audio, 'downloads': _downloads, 'description': _description, 'title': _title, 'urlTitle': _urlTitle, 'visited': _visited }})
+        resp = jsonify("Tone Updated Successfully")
+        resp.status_code = 200
+        return resp
 
 # Delete a tone
-@app.route('/tones/<int:id>', methods=['DELETE'])
+@app.route('/tone/<id>', methods=['DELETE'])
 def delete_tone(id):
-    for tone in tones:
-        if tone['id']==id:
-            tones.remove(tone)
-            return {"data":"Tone Deleted Successfully"}
-
-    return {'error':'Tone not found'}
-
-wallpapers = [
-    {
-        'id': 1,
-        'description': 'Explore and play bite-sized games anytime, anywhere-no downloads, just pure entertainment on the go!',
-        'imageURL':'/assets/wallpaper.png',
-        'title': 'wallpapers',
-        'downloads': '5k',
-        'visited': '9k'
-    }
-]
+    mongo.db.tones.delete_one({'_id':ObjectId(id)})
+    resp = jsonify("Tone Deleted Successfully")
+    resp.status_code = 200
+    return resp
 
 # Get all wallpapers
 @app.route('/wallpapers', methods=['GET'])
 def get_wallpapers():
-    return wallpapers
-
+    wallpapers = mongo.db.wallpapers.find()
+    resp = dumps(wallpapers)
+    return resp
 
 # Get a specific wallpaper by ID
-@app.route('/wallpapers/<int:id>', methods=['GET'])
-def get_wallpaper(id):
-    for wallpaper in wallpapers:
-        if wallpaper['id']==id:
-            return wallpaper
+@app.route('/wallpaper/<id>')
+def wallpaper(id):
+    wallpaper = mongo.db.wallpapers.find_one({'_id':ObjectId(id)})
+    resp = dumps(wallpaper)
+    return resp
 
-    return {'error':'Wallpaper not found'}
-
-# Create an wallpaper
+# Create a wallpaper
 @app.route('/wallpapers', methods=['POST'])
 def create_wallpaper():
-    new_wallpaper={'id':len(wallpapers)+1, 'downloads':request.json['downloads'], 'visited':request.json['visited'], 'description': request.json['description'], 'imageURL': request.json['imageURL'],'title': request.json['title'] }
-    wallpapers.append(new_wallpaper)
-    return new_wallpaper
+    _json = request.json
+    _downloads = _json['downloads']
+    _visited = _json['visited']
+    _description = _json['description']
+    _imageURL = _json['imageURL']
+    _title = _json['title']
 
-# Update an wallpaper
-@app.route('/wallpapers/<int:id>', methods=['PUT'])
+    if _downloads and _visited and _description and _imageURL and _title and request.method == 'POST':
+        id = mongo.db.wallpapers.insert_one({'downloads': _downloads, 'visited': _visited, 'description': _description, 'imageURL': _imageURL, 'title': _title })
+        return {"data":"Wallpaper Added Successfully"}
+    else:
+        return {'error':'Wallpaper Not Found'}
+
+# Update a wallpaper
+@app.route('/wallpaper/<id>', methods=['PUT'])
 def update_wallpaper(id):
-    for wallpaper in wallpapers:
-        if wallpaper['id']==id: 
-            wallpaper['downloads']= request.json['downloads'], 
-            wallpaper['visited']= request.json['visited'], 
-            wallpaper['description']= request.json['description'], 
-            wallpaper['imageURL']= request.json['imageURL'],  
-            wallpaper['title']= request.json['title']
-            return  
-    return {'error':'Wallpaper not found'}
+    _json = request.json
+    _id = id
+    _downloads = _json['downloads']
+    _visited = _json['visited']
+    _description = _json['description']
+    _imageURL = _json['imageURL']
+    _title = _json['title']
+
+    if _downloads and _visited and _description and _imageURL and _title and request.method == 'PUT':
+        mongo.db.wallpapers.update_one({'_id': ObjectId(_id['$oid']) if '$oid' in _id else ObjectId(_id)}, {'$set': {'downloads': _downloads, 'visited': _visited, 'description': _description, 'imageURL': _imageURL, 'title': _title }})
+        resp = jsonify("Wallpaper Updated Successfully")
+        resp.status_code = 200
+        return resp
 
 # Delete a wallpaper
-@app.route('/wallpapers/<int:id>', methods=['DELETE'])
+@app.route('/wallpaper/<id>', methods=['DELETE'])
 def delete_wallpaper(id):
-    for wallpaper in wallpapers:
-        if wallpaper['id']==id:
-            wallpapers.remove(wallpaper)
-            return {"data":"Wallpaper Deleted Successfully"}
+    mongo.db.wallpapers.delete_one({'_id':ObjectId(id)})
+    resp = jsonify("Wallpaper Deleted Successfully")
+    resp.status_code = 200
+    return resp
 
-    return {'error':'Wallpaper not found'}
-
-# Run the flask App
 if __name__ == '__main__':
-    app.run(host='0.0.0.0', port=8080)
+    app.run(host='0.0.0.0', port=8080, debug=True)
